syntax = "proto3";

package ON.Fragments.Content;

enum LayoutEnum {
    List = 0;
    Grid = 1;
    Masonry = 2;
}
