syntax = "proto3";

package ON.Fragments.Settings;

import "google/api/annotations.proto";
import "Protos/ON/Fragments/Settings/SettingsRecord.proto";

// Service for Settings service fragment interface
service SettingsInterface {
  // Get public settings data
  rpc GetPublicData (GetPublicDataRequest) returns (GetPublicDataResponse)
  {
    option (google.api.http) = {
      get: "/api/settings/public"
    };
  }

  // Get public settings data
  rpc GetPublicNewerData (GetPublicNewerDataRequest) returns (GetPublicNewerDataResponse)
  {
    option (google.api.http) = {
      get: "/api/settings/public/newer/{VersionNum}"
    };
  }

  // Get all settings data
  rpc GetAllData (GetAllDataRequest) returns (GetAllDataResponse)
  {
    option (google.api.http) = {
      get: "/api/settings/all"
    };
  }

  // Get all settings data
  rpc GetAllNewerData (GetAllNewerDataRequest) returns (GetAllNewerDataResponse)
  {
    option (google.api.http) = {
      get: "/api/settings/all/newer/{VersionNum}"
    };
  }

  // Modify Personalization public data
  rpc ModifyPersonalizationPublicData (ModifyPersonalizationPublicDataRequest) returns (ModifyPersonalizationPublicDataResponse)
  {
    option (google.api.http) = {
      post: "/api/settings/personalization/public"
      body: "*"
    };
  }

  // Modify Personalization private data
  rpc ModifyPersonalizationPrivateData (ModifyPersonalizationPrivateDataRequest) returns (ModifyPersonalizationPrivateDataResponse)
  {
    option (google.api.http) = {
      post: "/api/settings/personalization/private"
      body: "*"
    };
  }

  // Modify Subscription public data
  rpc ModifySubscriptionPublicData (ModifySubscriptionPublicDataRequest) returns (ModifySubscriptionPublicDataResponse)
  {
    option (google.api.http) = {
      post: "/api/settings/subscription/public"
      body: "*"
    };
  }

  // Modify Subscription private data
  rpc ModifySubscriptionPrivateData (ModifySubscriptionPrivateDataRequest) returns (ModifySubscriptionPrivateDataResponse)
  {
    option (google.api.http) = {
      post: "/api/settings/subscription/private"
      body: "*"
    };
  }

  // Modify Comments public data
  rpc ModifyCommentsPublicData (ModifyCommentsPublicDataRequest) returns (ModifyCommentsPublicDataResponse)
  {
    option (google.api.http) = {
      post: "/api/settings/comments/public"
      body: "*"
    };
  }

  // Modify Comments private data
  rpc ModifyCommentsPrivateData (ModifyCommentsPrivateDataRequest) returns (ModifyCommentsPrivateDataResponse)
  {
    option (google.api.http) = {
      post: "/api/settings/comments/private"
      body: "*"
    };
  }
}

message GetPublicDataRequest {
}

message GetPublicDataResponse {
  SettingsRecord.PublicData Data = 1;
}

message GetPublicNewerDataRequest {
  uint32 VersionNum = 1;
}

message GetPublicNewerDataResponse {
  SettingsRecord.PublicData Data = 1;
}

message GetAllDataRequest {
}

message GetAllDataResponse {
  SettingsRecord Data = 1;
}

message GetAllNewerDataRequest {
  uint32 VersionNum = 1;
}

message GetAllNewerDataResponse {
  SettingsRecord Data = 1;
}

enum ModifyResponseErrorType {
  NoError = 0;
  UnknownError = -1;
}

message ModifyPersonalizationPublicDataRequest {
  PersonalizationPublicRecord Data = 1;
}

message ModifyPersonalizationPublicDataResponse {
  ModifyResponseErrorType Error = 1;
}

message ModifyPersonalizationPrivateDataRequest {
  PersonalizationPrivateRecord Data = 1;
}

message ModifyPersonalizationPrivateDataResponse {
  ModifyResponseErrorType Error = 1;
}

message ModifySubscriptionPublicDataRequest {
  SubscriptionPublicRecord Data = 1;
}

message ModifySubscriptionPublicDataResponse {
  ModifyResponseErrorType Error = 1;
}

message ModifySubscriptionPrivateDataRequest {
  SubscriptionPrivateRecord Data = 1;
}

message ModifySubscriptionPrivateDataResponse {
  ModifyResponseErrorType Error = 1;
}

message ModifyCommentsPublicDataRequest {
  CommentsPublicRecord Data = 1;
}

message ModifyCommentsPublicDataResponse {
  ModifyResponseErrorType Error = 1;
}

message ModifyCommentsPrivateDataRequest {
  CommentsPrivateRecord Data = 1;
}

message ModifyCommentsPrivateDataResponse {
  ModifyResponseErrorType Error = 1;
}
